objects/HVEM_Config_Options__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Config settings for HVEM app</description>
    <fields>
        <fullName>Allow_Draft_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HVEM config setting which allows the user to send the saved drafts for approval..</description>
        <inlineHelpText>HVEM config setting which allows the user to send the saved drafts for approval.</inlineHelpText>
        <label>Allow Draft Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Drafts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HVEM config setting which allows the user to save drafts.</description>
        <inlineHelpText>HVEM config setting which allows the user to save drafts.</inlineHelpText>
        <label>Allow Drafts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Article_Link_Base_URL__c</fullName>
        <description>HVEM config setting which sets article link base URL</description>
        <inlineHelpText>HVEM config setting which sets article link base URL</inlineHelpText>
        <label>Article Link Base URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Article_Types_Filter__c</fullName>
        <description>HVEM config setting which sets default article types filters</description>
        <inlineHelpText>HVEM config setting which sets default article types filters</inlineHelpText>
        <label>Article Types Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Populate_To_Field_From_Case_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HVEM config setting which determines whether to populate &apos;To&apos; field by default from case contact</description>
        <inlineHelpText>HVEM config setting which determines whether to populate &apos;To&apos; field by default from case contact</inlineHelpText>
        <label>Auto-Populate To Field From Case Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_Data_Category_Group_Filter__c</fullName>
        <label>Available Data Category Group Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Mappin_API__c</fullName>
        <description>String that holds the case mapping API</description>
        <inlineHelpText>String that holds the case mapping API</inlineHelpText>
        <label>Case Mappin API</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Case_Mapping_Label__c</fullName>
        <description>String that holds the case mapping labels</description>
        <inlineHelpText>String that holds the case mapping labels</inlineHelpText>
        <label>Case Mapping Label</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Data_Category_Group_Filter__c</fullName>
        <description>HVEM config setting which sets default data category group filters</description>
        <inlineHelpText>HVEM config setting which sets default data category group filters</inlineHelpText>
        <label>Data  Category Group Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Email_Folder__c</fullName>
        <description>Default email Folder for Email Composer component</description>
        <inlineHelpText>Default email Folder for Email Composer component</inlineHelpText>
        <label>Default Email Folder</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Email_Template__c</fullName>
        <description>Default email template for Email Composer component</description>
        <inlineHelpText>Default email template for Email Composer component</inlineHelpText>
        <label>Default Email Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Submission_Of_Drafts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HVEM config setting which allows the manual submission of drafts.</description>
        <inlineHelpText>HVEM config setting which allows the manual submission of drafts.</inlineHelpText>
        <label>Allow Manual Submission Of Drafts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Public_Groups_With_No_Approval_Extended__c</fullName>
        <label>Public Groups With No Approval Extended</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Groups_With_No_Approval__c</fullName>
        <description>HVEM config setting which saves the id of  public groups. with no need for approval.for sending mail</description>
        <inlineHelpText>HVEM config setting which saves the id of  public groups. with no need for approval.for sending mail</inlineHelpText>
        <label>Public Groups With No Approval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reply_To_Mail__c</fullName>
        <label>Reply To Mail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Under_Approval_Case_Status__c</fullName>
        <description>HVEM config setting which allows the user to save drafts</description>
        <inlineHelpText>HVEM config setting which allows the user to save drafts</inlineHelpText>
        <label>Under Approval Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HVEM Config Options</label>
</CustomObject>